Update css for dark mode and fix some issues on Firefox

--- a/enhance-node-name.css
+++ b/enhance-node-name.css
@@ -4,12 +4,11 @@
 
 /* Node name */
 #Main .box a.node {
-  background-color: #f5f5f5;
   color: #1ba784;
 }
 
 /* 节点，用户名显示在标题上面 */
-td:has(> .topic_info) {
+#Main td:has(.topic_info) {
   display: flex;
   flex-direction: column-reverse;
 }
