--- a/sticky-header.css
+++ b/sticky-header.css
@@ -1,7 +1,8 @@
 #Top {
-  position: sticky;
+  position: fixed;
   top: 0;
-  background-color: white;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 #Top .content {
@@ -16,7 +17,38 @@
   margin-right: auto;
 }
 
+#Wrapper::before {
+  content: "";
+  display: block;
+  height: 44px;
+}
+
+/* v2hot */
+#placeholder {
+  height: 38px;
+}
+
 #Tabs {
   position: fixed;
-  top: -1px;
+  top: 1px;
+  padding: 9px;
+  border: none;
+}
+
+#search-container {
+  width: 100px;
+}
+#search-container:has(input:focus) {
+  width: 300px;
+}
+
+body:has(input:focus) #Tabs {
+  display: none;
+}
+
+/* 屏幕宽度小时，隐藏 logo */
+@media only screen and (max-width: 1300px) {
+  .site-nav a[name="top"] {
+    visibility: hidden;
+  }
 }
